# BarcodeUSB-RS232

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
src/: main.c
